--- a/templates/files.html
+++ b/templates/files.html
@@ -197,7 +197,7 @@
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link" href="/">Dashboard</a></li>
                     <li class="nav-item"><a class="nav-link active" href="/files">Files</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/photos">Photos</a></li>
+                    <!-- Photos removed - API deprecated March 31, 2025 -->
                     <li class="nav-item"><a class="nav-link" href="/logs">Logs</a></li>
                     <li class="nav-item"><a class="nav-link" href="/settings">Settings</a></li>
                 </ul>
