--- a/templates/settings.html
+++ b/templates/settings.html
@@ -46,9 +46,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/files">Files</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/photos">Photos</a>
-                    </li>
+                    <!-- Photos removed - API deprecated March 31, 2025 -->
                     <li class="nav-item">
                         <a class="nav-link" href="/logs">Logs</a>
                     </li>
@@ -166,17 +164,6 @@
                                     </label>
                                 </div>
                                 <small class="text-muted">Local path: {{ config.sources.google_drive.local_path }}</small>
-                            </div>
-                            <div class="col-md-6">
-                                <h6>Google Photos</h6>
-                                <div class="form-check form-switch">
-                                    <input class="form-check-input" type="checkbox" id="photosSyncEnabled" 
-                                           {% if config.sources.google_photos.enabled %}checked{% endif %} disabled>
-                                    <label class="form-check-label" for="photosSyncEnabled">
-                                        Sync Enabled
-                                    </label>
-                                </div>
-                                <small class="text-muted">Local path: {{ config.sources.google_photos.local_path }}</small>
                             </div>
                         </div>
                         <div class="mt-3">
